Issue #3513439 by sandip, kentr, nod_: Claro primary tabs collapsed menu hamburger icon has insufficient contrast with forced-colors dark background

--- a/core/themes/claro/css/components/tabs.css
+++ b/core/themes/claro/css/components/tabs.css
@@ -278,3 +278,9 @@
       0 0 0 calc(var(--tabs--focus-height) + 2px) var(--color-focus);
   }
 }
+
+@media (forced-colors: active) {
+  .tabs__trigger svg path {
+    fill: currentColor;
+  }
+}
