--- a/core/themes/claro/css/components/tabs.pcss.css
+++ b/core/themes/claro/css/components/tabs.pcss.css
@@ -269,3 +269,9 @@
     }
   }
 }
+
+@media (forced-colors: active) {
+  .tabs__trigger svg path {
+    fill: currentColor;
+  }
+}
